[package]
name = "connection_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.166"
tokio = {version = "1.29.1", features = ["rt", "macros"]}

common = {path = "../common"}

[features]
initiator = []
repeater = []
responder = []