[package]
name = "qrsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.166"
uuid = {version = "1.4.1", features = ["v4", "serde"]}
config = {version = "0.13.3", features = ["toml"]}
bytes = "1"
tokio = {version = "1.29.1", features = ["full"]}  # TODO: remove unused features
tokio-util = {version = "0.7.0", features = ["full"]}
tokio-stream = "0.1"
tokio-serde = "0.8.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.72"
mockall = "0.11.4"

