[project]
name = "qrsa_prototype"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "common",
    "fastapi>=0.101.0",
    "uvicorn>=0.23.2",
    "asyncio>=3.4.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.workspace]
members = ["*"]
