[project]
name = "qrsa_prototype"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "common",
    "controller",
    "qnode",
    "fastapi>=0.101.0",
    "uvicorn>=0.23.2",
    "asyncio>=3.4.3",
    "requests>=2.31.0",
    "ipaddress>=1.0.23",
    "uuid>=1.30",
    "pydantic>=2.1.1",
    "dependency-injector>=4.41.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1",
    "httpx>=0.24.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.workspace]
members = ["*"]

[tool.pytest.ini_options]
# Currently, test client uses some deprecated functions
filterwarnings = "ignore::DeprecationWarning"