[project]
name = "controller"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zigen", email = "hrlclb@gmail.com" }
]
dependencies = [
    "fastapi[a11]>=0.101.0",
    "uvicorn[standard]>=0.23.2",
    "docker>=6.1.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.package-dir]
controller = "src"

[tool.rye]
managed = true
dev-dependencies = []


[tool.hatch.metadata]
allow-direct-references = true