[project]
name = "qnode"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chibikuri", email = "ryosuke.satoh.wk@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
